# matrix-locust

./: .env.example  .gitignore  Dockerfile.local  OIDC_README.md  README.md  REAL_OIDC_README.md  TESTING.md  connect-apple-login-test.py  create-test-rooms-and-events.py  generate_oidc_users.py  generate_users.py  locust-oidc-login.py  locust-phase2-apple-login.py  locust-send-messages.py  locust-setup-test-data.py  oidc-login-sync-test.py  pyproject.toml  setup-users.csv  test_oidc_users.csv  test_real_oidc_browser.py  test_real_oidc_login.py  user_external_ids.csv
matrix_locust/client_server/: create_room.py  oidc_login.py
matrix_locust/nio/: locust_client.py  locust_oidc_client.py
matrix_locust/users/: matrixchatuser.py  matrixoidcchatuser.py  matrixoidcuser.py  matrixuser.py
test-suites/: oidc-example-100.json
