[tool.poetry]
name = "matrix-locust"
version = "0.1.0"
description = "Load testing for Matrix in Python using Locust"
license = "Apache-2.0"
authors = [
    "Charles Wright <cvwright@futo.org>",
    "Michael Hollister <michael@futo.org>"
]
readme = "README.md"
repository = "https://github.com/circles-project/matrix-locust"
keywords = ["matrix", "locust", "loadtest"]

[tool.poetry.dependencies]
python = "^3.9"
locust = "2.17.0"
matrix-nio = "0.21.2"
requests = "^2.31.0"
cryptography = "^41.0.0"
beautifulsoup4 = "^4.12.0"

[tool.poetry.group.circles]
optional = true

[tool.poetry.group.circles.dependencies]
cffi = "1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
